# die-souveraenitaet-des-musters

./: .codespellignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
assets/covers/: cover-midjourney-prompts.md
config/: book-description.html  categories.md  cover-back-page-author-introduction.md  cover-back-page-description.md  export-settings.yaml  metadata.yaml  styles.css
config/data/: image_prompt_generation_template.json
manuscript/back-matter/: about-the-author.md  acknowledgments.md  appendix.md  epilogue.md  glossary.md  imprint.md
manuscript/chapters/: 01-chapter.md  02-chapter.md  03-chapter.md  04-chapter.md  05-chapter.md  06-chapter.md  07-chapter.md  08-chapter.md  09-chapter.md  10-chapter.md  11-chapter.md  12-chapter.md  13-chapter.md  14-chapter.md  15-chapter.md  16-chapter.md  17-chapter.md  18-chapter.md  19-chapter.md  20-chapter.md
manuscript/front-matter/: foreword.md  preface.md  toc-print.md  toc.md
